[package]
name = "Crud-app-rust-backend-"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
warp = "0.3.7"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
serde = "1" # Used in the Map Data into Structs section
futures-util = "0.3"
